<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimeOver"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvTimeUni"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTimeOver"
        app:layout_constraintStart_toStartOf="@+id/tvTimeOver"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeOver" />

    <TextView
        android:id="@+id/tvTimePlos"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTimeUni"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTimeUni"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeUni" />

    <TextView
        android:id="@+id/tvNamename"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/time_over"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvNamename"
        app:layout_constraintStart_toStartOf="@+id/tvNamename"
        app:layout_constraintTop_toBottomOf="@+id/tvNamename" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/time_uni"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/time_plos"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvPart"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="240dp"
        android:text="@string/part"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvColObor"
        android:layout_width="150dp"
        android:layout_height="31dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/col"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPart" />

    <EditText
        android:id="@+id/edColOver"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColObor" />

    <EditText
        android:id="@+id/edColUni"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edColOver"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edColOver"
        app:layout_constraintTop_toBottomOf="@+id/edColOver" />

    <TextView
        android:id="@+id/tvPlos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/Plos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUni" />

    <EditText
        android:id="@+id/edColPlos"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edColUni"
        app:layout_constraintStart_toStartOf="@+id/edColUni"
        app:layout_constraintTop_toBottomOf="@+id/edColUni" />

    <TextView
        android:id="@+id/tvOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="108dp"
        android:text="@string/Over"
        app:layout_constraintEnd_toStartOf="@+id/edColOver"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPart" />

    <TextView
        android:id="@+id/tvUni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/Uni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOver" />

    <TextView
        android:id="@+id/tvTimePart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/time_part"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvColObor"
        app:layout_constraintTop_toBottomOf="@+id/tvPart" />

    <TextView
        android:id="@+id/tvOverHour"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time_day"
        app:layout_constraintEnd_toEndOf="@+id/tvTimePart"
        app:layout_constraintTop_toBottomOf="@+id/tvTimePart" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time_hour"
        app:layout_constraintStart_toStartOf="@+id/tvTimePart"
        app:layout_constraintTop_toBottomOf="@+id/tvTimePart" />

    <TextView
        android:id="@+id/tvPlosDay"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="@+id/tvUniDay"
        app:layout_constraintStart_toStartOf="@+id/tvUniDay"
        app:layout_constraintTop_toBottomOf="@+id/tvUniDay" />

    <TextView
        android:id="@+id/tvUniDay"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="@+id/tvOverDay"
        app:layout_constraintStart_toStartOf="@+id/tvOverDay"
        app:layout_constraintTop_toBottomOf="@+id/tvOverDay" />

    <TextView
        android:id="@+id/tvOverDay"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/tvUniHour"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="@+id/tvOverHour"
        app:layout_constraintStart_toStartOf="@+id/tvOverHour"
        app:layout_constraintTop_toBottomOf="@+id/tvOverHour" />

    <TextView
        android:id="@+id/tvPlosHour"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="@+id/tvUniHour"
        app:layout_constraintStart_toStartOf="@+id/tvUniHour"
        app:layout_constraintTop_toBottomOf="@+id/tvUniHour" />

    <Button
        android:id="@+id/btCalkTimePart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:onClick="onClickCalkTime"
        android:text="@string/calk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickBack"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btCalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickCalk"
        android:text="@string/calk2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edColPart"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="           ед."
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPart"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>